--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Djeli</title>
+    <link rel="shortcut icon" href="icon-laranja-djeli.png" type="image/x-icon">
+    <title>Djeli Afro</title>
   </head>
   <body>
     <div id="root"></div>
